[gd_scene load_steps=5 format=4 uid="uid://bllke6nby7koo"]

[ext_resource type="Script" uid="uid://carydjfhslyay" path="res://scripts/tilemaps.gd" id="1_j3la0"]
[ext_resource type="TileSet" uid="uid://iwr8yvyyljif" path="res://resources/layer0.tres" id="1_lfi36"]
[ext_resource type="TileSet" uid="uid://cbnffwt8jxdgo" path="res://resources/layer1.tres" id="2_p5sh7"]
[ext_resource type="TileSet" uid="uid://ckeibrddel5l8" path="res://resources/layer0wall.tres" id="3_arm6k"]

[node name="TileMaps" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_j3la0")

[node name="Layer0" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAAAAQADAAEAAAAAAAEAAQAFAAYAAAD//wEAAQAGAAEAAAD+/wIAAQAKAAEAAAD+/wEAAQAEAAYAAAD+/wAAAQAGAAEAAAD+////AQABAAEAAAD+//7/AQACAAEAAAD//wIAAQAGAAEAAAAAAAIAAQAHAAEAAAABAAIAAQAIAAEAAAACAAIAAQALAAEAAAACAAEAAQAEAAEAAAACAP7/AQABAAEAAAABAP7/AQAIAAEAAAAAAP7/AQAGAAEAAAD///7/AQAGAAEAAAD9/wIAAQABAAEAAAD9/wEAAQAHAAEAAAD9/wAAAQAGAAEAAAD9////AQAAAAEAAAD9//7/AQABAAEAAAD9/wMAAQAAAAEAAAD+/wMAAQALAAEAAAD//wMAAQAFAAEAAAAAAAMAAQAGAAYAAAABAAMAAQAIAAEAAAACAAMAAQAIAAEAAAD8//7/AQACAAEAAAD8////AQAAAAEAAAD8/wAAAQAHAAYAAAD8/wEAAQAFAAYAAAD8/wIAAQAIAAEAAAD8/wMAAQAIAAEAAAD8//3/AQAAAAEAAAD9//3/AQADAAEAAAD+//3/AQAAAAEAAAD///3/AQAHAAYAAAAAAP3/AQAHAAEAAAABAP3/AQAKAAEAAAD//wAAAQAFAAYAAAAAAP//AQAEAAEAAAD/////AQAEAAEAAAACAP3/AQADAAEAAAACAP//AQAIAAEAAAABAP//AQABAAEAAAABAAEAAQAFAAYAAAD+/wQAAQAAAAEAAAD9/wQAAQACAAEAAAD8/wQAAQALAAEAAAD//wQAAQAFAAYAAAAAAAQAAQAEAAYAAAABAAQAAQADAAEAAAACAAQAAQALAAEAAAADAAAAAQAFAAYAAAACAAAAAQAEAAYAAAABAAAAAQAHAAEAAAADAAQAAQAAAAEAAAADAAMAAQABAAEAAAADAAIAAQAJAAEAAAADAAEAAQAFAAYAAAADAP//AQACAAEAAAADAP7/AQADAAEAAAADAP3/AQADAAEAAAADAPz/AQAAAAEAAAACAPz/AQALAAEAAAABAPz/AQAKAAEAAAAAAPz/AQAHAAYAAAD///z/AQAHAAEAAAD+//z/AQADAAEAAAD9//z/AQABAAEAAAD8//z/AQACAAEAAAD7//z/AQACAAEAAAD7//3/AQACAAEAAAD7//7/AQABAAEAAAD7////AQADAAEAAAD7/wAAAQAGAAYAAAD7/wEAAQAEAAEAAAD7/wIAAQALAAEAAAD7/wMAAQAAAAEAAAD7/wQAAQAIAAEAAAD7//v/AQAIAAQAAAD7//P/AQAEAAYAAAD7//T/AQABAAEAAAD7//X/AQALAAQAAAD7//b/AQACAAQAAAD7//f/AQABAAEAAAD7//j/AQAJAAEAAAD7//n/AQAKAAQAAAD7//r/AQAJAAEAAAD8//P/AQAHAAYAAAD8//T/AQADAAQAAAD8//X/AQACAAQAAAD8//b/AQAAAAEAAAD8//f/AQAKAAQAAAD8//j/AQAAAAEAAAD8//n/AQAAAAQAAAD8//r/AQAAAAQAAAD8//v/AQACAAQAAAD9//P/AQAFAAYAAAD9//T/AQADAAEAAAD9//X/AQAKAAQAAAD9//b/AQALAAQAAAD9//f/AQAJAAQAAAD9//j/AQAAAAQAAAD9//n/AQAAAAQAAAD9//r/AQAAAAEAAAD9//v/AQAKAAEAAAD+//P/AQAFAAYAAAD+//T/AQACAAQAAAD+//X/AQAJAAQAAAD+//b/AQALAAQAAAD+//f/AQAIAAQAAAD+//j/AQALAAQAAAD+//n/AQALAAQAAAD+//r/AQABAAEAAAD+//v/AQAAAAQAAAD///P/AQAEAAYAAAD///T/AQALAAQAAAD///X/AQABAAQAAAD///b/AQABAAQAAAD///f/AQAKAAQAAAD///j/AQAAAAQAAAD///n/AQAJAAQAAAD///r/AQAJAAEAAAD///v/AQADAAQAAAAAAPP/AQAHAAYAAAAAAPT/AQAAAAEAAAAAAPX/AQADAAQAAAAAAPb/AQAKAAQAAAAAAPf/AQAJAAQAAAAAAPj/AQACAAQAAAAAAPn/AQAKAAQAAAAAAPr/AQADAAQAAAAAAPv/AQAJAAEAAAABAPP/AQAHAAYAAAABAPT/AQADAAQAAAABAPX/AQAJAAQAAAABAPb/AQACAAQAAAABAPf/AQACAAQAAAABAPj/AQACAAQAAAABAPn/AQAIAAQAAAABAPr/AQAJAAQAAAABAPv/AQAIAAQAAAACAPP/AQAEAAYAAAACAPT/AQAJAAEAAAACAPX/AQADAAQAAAACAPb/AQACAAQAAAACAPf/AQAJAAQAAAACAPj/AQAJAAQAAAACAPn/AQACAAEAAAACAPr/AQADAAQAAAACAPv/AQADAAQAAAADAPP/AQAEAAYAAAADAPT/AQAAAAQAAAADAPX/AQALAAQAAAADAPb/AQAJAAEAAAADAPf/AQAJAAQAAAADAPj/AQAKAAEAAAADAPn/AQAIAAQAAAADAPr/AQAAAAEAAAADAPv/AQALAAQAAAAEAPP/AQAJAAQAAAAEAPT/AQACAAEAAAAEAPX/AQALAAEAAAAEAPb/AQACAAQAAAAEAPf/AQAHAAEAAAAEAPj/AQACAAQAAAAEAPn/AQABAAEAAAAEAPr/AQALAAEAAAAEAPv/AQABAAEAAAAFAPP/AQALAAEAAAAFAPT/AQACAAQAAAAFAPX/AQAGAAQAAAAFAPb/AQAJAAQAAAAFAPf/AQAAAAQAAAAFAPj/AQADAAQAAAAFAPn/AQALAAEAAAAFAPr/AQAKAAQAAAAFAPv/AQAJAAQAAAAGAPP/AQAKAAEAAAAGAPT/AQAIAAEAAAAGAPX/AQAHAAEAAAAGAPb/AQADAAEAAAAGAPf/AQAKAAQAAAAGAPj/AQAJAAQAAAAGAPn/AQAAAAQAAAAGAPr/AQAJAAEAAAAGAPv/AQAHAAEAAAAHAPP/AQAEAAQAAAAHAPT/AQAFAAQAAAAHAPX/AQAAAAQAAAAHAPb/AQALAAEAAAAHAPf/AQABAAEAAAAHAPj/AQAGAAEAAAAHAPn/AQAEAAQAAAAHAPr/AQAJAAEAAAAHAPv/AQADAAQAAAAIAPP/AQAEAAQAAAAIAPT/AQAFAAEAAAAIAPX/AQABAAQAAAAIAPb/AQABAAEAAAAIAPf/AQAGAAQAAAAIAPj/AQAFAAEAAAAIAPn/AQADAAQAAAAIAPr/AQAJAAQAAAAIAPv/AQAKAAQAAAAJAPP/AQAKAAEAAAAJAPT/AQALAAEAAAAJAPX/AQAIAAQAAAAJAPb/AQALAAEAAAAJAPf/AQAAAAEAAAAJAPj/AQABAAEAAAAJAPn/AQABAAQAAAAJAPr/AQALAAQAAAAJAPv/AQAKAAQAAAAKAPP/AQAKAAQAAAAKAPT/AQAJAAEAAAAKAPX/AQAEAAQAAAAKAPb/AQAKAAQAAAAKAPf/AQAHAAQAAAAKAPj/AQAGAAQAAAAKAPn/AQAKAAEAAAAKAPr/AQAHAAEAAAAKAPv/AQAJAAEAAAALAPP/AQALAAEAAAALAPT/AQAHAAEAAAALAPX/AQAIAAQAAAALAPb/AQACAAQAAAALAPf/AQAAAAQAAAALAPj/AQAFAAQAAAALAPn/AQALAAEAAAALAPr/AQALAAQAAAALAPv/AQAAAAEAAAAMAPP/AQAJAAEAAAAMAPT/AQACAAEAAAAMAPX/AQAIAAEAAAAMAPb/AQADAAEAAAAMAPf/AQAIAAQAAAAMAPj/AQAKAAEAAAAMAPn/AQAFAAQAAAAMAPr/AQAHAAQAAAAMAPv/AQADAAQAAAD7/+v/AQAEAAYAAAD7/+z/AQAGAAYAAAD7/+3/AQAEAAYAAAD7/+7/AQAHAAYAAAD7/+//AQAHAAYAAAD7//D/AQAEAAYAAAD7//H/AQAFAAYAAAD7//L/AQAGAAYAAAD8/+v/AQAGAAYAAAD8/+z/AQAEAAgAAAD8/+3/AQAGAAgAAAD8/+7/AQAEAAYAAAD8/+//AQAHAAYAAAD8//D/AQAEAAYAAAD8//H/AQAFAAYAAAD8//L/AQAGAAYAAAD9/+v/AQAGAAYAAAD9/+z/AQAEAAgAAAD9/+3/AQAGAAgAAAD9/+7/AQAFAAYAAAD9/+//AQAEAAYAAAD9//D/AQAEAAYAAAD9//H/AQAHAAYAAAD9//L/AQAEAAYAAAD+/+v/AQAGAAYAAAD+/+z/AQAEAAgAAAD+/+3/AQAFAAgAAAD+/+7/AQAHAAYAAAD+/+//AQAEAAYAAAD+//D/AQAHAAYAAAD+//H/AQAFAAYAAAD+//L/AQAFAAYAAAD//+v/AQAGAAYAAAD//+z/AQAEAAgAAAD//+3/AQAGAAgAAAD//+7/AQAHAAYAAAD//+//AQAHAAYAAAD///D/AQAGAAYAAAD///H/AQAEAAYAAAD///L/AQAFAAYAAAAAAOv/AQAGAAYAAAAAAOz/AQAEAAgAAAAAAO3/AQAFAAgAAAAAAO7/AQAGAAgAAAAAAO//AQAGAAgAAAAAAPD/AQAFAAgAAAAAAPH/AQAHAAYAAAAAAPL/AQAGAAYAAAABAOv/AQAGAAYAAAABAOz/AQAGAAgAAAABAO3/AQAHAAgAAAABAO7/AQAHAAgAAAABAO//AQAHAAgAAAABAPD/AQAEAAgAAAABAPH/AQAHAAYAAAABAPL/AQAGAAYAAAACAOv/AQAGAAYAAAACAOz/AQAEAAgAAAACAO3/AQAGAAgAAAACAO7/AQAHAAgAAAACAO//AQAFAAgAAAACAPD/AQAGAAgAAAACAPH/AQAHAAYAAAACAPL/AQAGAAYAAAADAOv/AQAEAAYAAAADAOz/AQAEAAYAAAADAO3/AQAFAAYAAAADAO7/AQAFAAYAAAADAO//AQAGAAYAAAADAPD/AQAGAAYAAAADAPH/AQAEAAYAAAADAPL/AQAFAAYAAADy//z/AQABAAYAAADy//3/AQAAAAYAAADy//7/AQAAAAYAAADy////AQAAAAYAAADy/wAAAQACAAYAAADy/wEAAQADAAYAAADy/wIAAQACAAYAAADy/wMAAQACAAYAAADy/wQAAQAAAAYAAADz//z/AQABAAYAAADz//3/AQABAAYAAADz//7/AQADAAYAAADz////AQABAAYAAADz/wAAAQAAAAYAAADz/wEAAQABAAYAAADz/wIAAQAAAAYAAADz/wMAAQADAAYAAADz/wQAAQABAAYAAAD0//z/AQADAAYAAAD0//3/AQACAAYAAAD0//7/AQACAAYAAAD0////AQABAAYAAAD0/wAAAQADAAYAAAD0/wEAAQACAAYAAAD0/wIAAQACAAYAAAD0/wMAAQABAAYAAAD0/wQAAQABAAYAAAD1//z/AQAAAAYAAAD1//3/AQAAAAYAAAD1//7/AQACAAYAAAD1////AQAAAAYAAAD1/wAAAQABAAYAAAD1/wEAAQACAAYAAAD1/wIAAQAAAAYAAAD1/wMAAQADAAYAAAD1/wQAAQAAAAYAAAD2//z/AQACAAYAAAD2//3/AQAAAAYAAAD2//7/AQACAAYAAAD2////AQACAAYAAAD2/wAAAQACAAYAAAD2/wEAAQACAAYAAAD2/wIAAQAAAAYAAAD2/wMAAQABAAYAAAD2/wQAAQABAAYAAAD3//z/AQAAAAYAAAD3//3/AQACAAYAAAD3//7/AQADAAYAAAD3////AQAAAAYAAAD3/wAAAQACAAYAAAD3/wEAAQAAAAYAAAD3/wIAAQACAAYAAAD3/wMAAQACAAYAAAD3/wQAAQACAAYAAAD4//z/AQAAAAYAAAD4//3/AQADAAYAAAD4//7/AQACAAYAAAD4////AQAAAAYAAAD4/wAAAQAAAAYAAAD4/wEAAQADAAYAAAD4/wIAAQACAAYAAAD4/wMAAQAAAAYAAAD4/wQAAQADAAYAAAD5//z/AQADAAYAAAD5//3/AQABAAYAAAD5//7/AQACAAYAAAD5////AQAAAAYAAAD5/wAAAQABAAYAAAD5/wEAAQACAAYAAAD5/wIAAQADAAYAAAD5/wMAAQAAAAYAAAD5/wQAAQAAAAYAAAD6//z/AQADAAYAAAD6//3/AQACAAYAAAD6//7/AQADAAYAAAD6////AQABAAYAAAD6/wAAAQABAAYAAAD6/wEAAQAAAAYAAAD6/wIAAQAAAAYAAAD6/wMAAQABAAYAAAD6/wQAAQABAAYAAAA=")
tile_set = ExtResource("1_lfi36")

[node name="Layer0A" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_lfi36")
navigation_enabled = false

[node name="Layer0Wall" type="TileMapLayer" parent="."]
z_index = -100
tile_set = ExtResource("3_arm6k")

[node name="BlockLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAADAAIAAAAHAAgAAAABAAQAAAAJAAoAAAD9//j/AgAAAAAABAD+//X/AgAAAAAABAD8//b/AgAAAAAABAAAAPT/AgAAAAAABAAAAPf/AgAAAAAABAACAPj/AgAAAAAABAAAAPr/AgAAAAAABAACAPb/AgAAAAAABAD+//f/AgAAAAAABAD8//n/AgAAAAAABAD+/wQAAgAAAAAAAAD9/wQAAgAAAAAAAAD+/wIAAgAAAAAAAQA=")
tile_set = ExtResource("2_p5sh7")

[node name="PlantLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD9/wIAAQANAA4AAAACAP7/AQANAA4AAAACAP3/AQAOAAwAAAD7/wMAAQAOAAwAAAABAAIAAAAAAAgAAAD3////AgAAAAAAAgD3//3/AgAAAAAAAgD1//3/AgAAAAAAAgD1////AgAAAAAAAwDz////AgAAAAAAAwDz//3/AgAAAAAAAwA=")
tile_set = ExtResource("2_p5sh7")

[connection signal="changed" from="Layer0" to="." method="_on_layer_0_changed"]
